Dpng 8086 Use instance_id placeholder instead service_id (#23)
* DPNG-8086 Use instance_id placeholder instead service_id

* DPNG-8086 Refactor application template

* DPNG-8086 Remove unused templates

* DPNG-8086 Added placeholders
